# City-Mapper

./: .gitignore  Generic_station_parser.hpp  IMPLEMENTATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.cpp  station_parser.h  test_station_connection.cpp
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
backend/: CMakeLists.txt  Dockerfile  conanfile.txt
backend/src/: main.cpp
backend/src/api/controllers/: HealthController.cpp  HealthController.hpp  RouteController.cpp  RouteController.hpp  StationController.cpp  StationController.hpp
backend/src/api/middleware/: CORSFilter.cpp  CORSFilter.hpp
backend/src/config/: AppConfig.hpp
backend/src/core/algorithms/: AStar.cpp  AStar.hpp  Dijkstra.cpp  Dijkstra.hpp  IPathfinder.hpp
backend/src/core/cache/: LRUCache.hpp  RouteCache.hpp
backend/src/core/graph/: Connection.hpp  Graph.cpp  Graph.hpp  RouteResult.hpp  Station.hpp
backend/src/core/utils/: Haversine.hpp  StringUtils.hpp  TimeFormatter.hpp
backend/src/data/loaders/: GraphLoader.cpp  GraphLoader.hpp
backend/src/data/parsers/: CSVConnectionParser.cpp  CSVConnectionParser.hpp  CSVStationParser.cpp  CSVStationParser.hpp  GTFSStopsParser.cpp  GTFSStopsParser.hpp  IConnectionParser.hpp  IStationParser.hpp
backend/tests/: CMakeLists.txt
backend/tests/unit/: AStarTest.cpp  CSVParserTest.cpp  DijkstraTest.cpp  GraphTest.cpp  HaversineTest.cpp  LRUCacheTest.cpp
deploy/: deploy.sh
docs/: ALGORITHMS.md  API_SCHEMA.md  ARCHITECTURE.md
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/e2e/: playwright.config.ts
frontend/e2e/specs/: accessibility.spec.ts  map-interaction.spec.ts  search-route.spec.ts
frontend/public/assets/i18n/: en.json  fr.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/app/core/constants/: metro-lines-accessible.ts  metro-lines.ts
frontend/src/app/core/interceptors/: error.interceptor.ts
frontend/src/app/core/models/: connection.model.ts  metro-line.model.ts  route.model.ts  segment.model.ts  station.model.ts
frontend/src/app/core/services/: accessibility.service.ts  api.service.ts  keyboard-shortcut.service.ts  recent-search.service.spec.ts  recent-search.service.ts  route.service.ts  share-route.service.ts  speech.service.ts  station.service.ts
frontend/src/app/features/map/: map.component.ts
frontend/src/app/features/not-found/: not-found.component.ts
frontend/src/app/features/route-details/: route-details.component.ts  route-summary.component.ts  segment-card.component.ts  transfer-indicator.component.ts
frontend/src/app/features/search/: recent-searches.component.ts  search-panel.component.ts  station-autocomplete.component.ts  swap-button.component.ts  voice-input.component.ts
frontend/src/app/features/settings/: accessibility-toggle.component.ts  language-selector.component.ts  settings-panel.component.ts
frontend/src/app/shared/components/: loading-spinner.component.ts  metro-line-badge.component.ts  station-chip.component.ts
frontend/src/app/shared/directives/: click-outside.directive.ts
frontend/src/app/shared/pipes/: duration.pipe.spec.ts  duration.pipe.ts  (+2 more)
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/types/: web-speech-api.d.ts
source/: Generic_station_parser.hpp  Makefile  station_parser.cpp
source/test/: test_station_parser.cpp
traefik/: traefik.yml
traefik/dynamic/: routes.yml
(+18 files in other folders)
